# Risc-V

./: .gitignore  Makefile  README.md  TEST_INSTRUCTIONS.md  backup.v  build.py  dump.vcd  makefile  pipeline_stages.vcd  shell.nix  test.txt  test_fix.sh  vsim.pro
code/: prog.elf  prog.hex  prog.s
compiler/: encode_minimal.js  input.s  output.hex  program.hex  riscv-assembler.js
docs/: rv32e_instrucao_base_full.md  rv32e_instrucoes_base_priority.md
scripts/: assembler.py  build.js  build.py  test_config.json
sim/: Makefile  README.md  build.js  demo.sh  main.cpp  main.sv  rv32e_simulator.cpp  rv32e_simulator.h  test_state.json
sim/cli/: simulator.cpp
sim/core/: dumpload.cpp  dumpload.h  memdumper.h
sim/obj_dir/: Vmain.cpp  Vmain.h  Vmain.mk  Vmain__ALL.cpp  Vmain__ALL.d  Vmain__Syms.cpp  Vmain__Trace__0.cpp  Vmain__Trace__0__Slow.cpp  Vmain___024root.h  Vmain___024root__DepSet_h3334316c__0.cpp  Vmain___024root__DepSet_h3334316c__0__Slow.cpp  Vmain___024root__DepSet_h8b02a3a0__0.cpp  Vmain__ver.d  Vmain_classes.mk  main.d  rv32e_sim  rv32e_simulator.d
src/: constants.v  instruction_memory.v  main.v  sim.v
src/components/: alu.v  branch_unit.v  immediate_generator.v  memory_interface.v  pc_generator.v  register_file.v
src/control/: control_unit.v  forwarding_unit.v  harzad_detection.v  hazard_detection.v  stall_controller.v
src/core/: constants.v  rv32e_cpu.v  (+2 more)
testbench/: testbench.v
vsim/: CMakeLists.txt  Makefile  README.md  build.js  build.sh  vsim-gl.cpp  vsim-gui.cpp  vsim.pro
vsim/cli/: simulator.h  tui.cpp  tui.h
vsim/core/: memdumper.cpp
(+73 files in other folders)
